@@ -63,6 +63,8 @@ form.classic {
     input:focus, textarea:focus {
         background: #colours[active-field];
     }
+    .input-field input[type=submit]:focus,
+    .input-field input[type=password],
     .input-field input[type=text],
     .input-field select.select-multiple,
     .input-field textarea {
